# neuralnetworks

./: CMakeLists.txt  README.md
data/: dump
include/: Dataset.h  Deltas.h  Hyperparams.h  Network.h  NetworkState.h
src/: Dataset.cpp  Network.cpp  main.cpp
